2009-11-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, HACKING:
   Deprecate PLUGIN_KEY_GROUP() macro - use plugin_set_key_group()
   instead.


2009-11-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/makefile.win32:
   Fix broken build on Windows because of a typo
   (patch by Timothy Boronczyk, thanks).


2009-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, src/highlighting.h, src/keyfile.c, src/main.c,
   src/editor.h:
   Add 'View->Editor->Color Schemes' menu, for now only shown if color
   scheme files exist in a colorschemes config directory. Color scheme
   files must end in ".conf" and currently only the [named_styles]
   section is read.
 * src/templates.c, src/utils.c, src/highlighting.c, src/utils.h:
   Add utils_get_config_files().
 * src/highlighting.c:
   Fix issue with default color not being reset if overridden with a
   system default color.
 * src/highlighting.c:
   Only reload filetype files when changing color scheme, not all
   configuration files.
 * src/filetypes.c, src/document.c, src/document.h, doc/Doxyfile.in:
   Deprecate documents_foreach() as it looks more like a function; use
   foreach_document() instead.
   Generate dox even for GEANY_DISABLE_DEPRECATED declarations.


2009-10-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c, src/stash.h:
   Use typedef instead of pointer for widget_id function arguments.


2009-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/pluginutils.c:
   Don't expand Plugin Preferences page spacing vertically to fill the
   height of the dialog.
 * src/interface.c, src/keybindings.c, src/keybindings.h, src/prefs.c,
   geany.glade, plugins/splitwindow.c:
   Allow GeanyKeyBinding label field to contain underscores, which won't
   be displayed by Geany. This saves adding near-duplicate translation
   strings.
   Add mnemonics for 3 Edit->Format menu items.