@@ -3,6 +3,8 @@
  * src/plugindata.h, HACKING:
    Deprecate PLUGIN_KEY_GROUP() macro - use plugin_set_key_group()
    instead.
+ * src/callbacks.c:
+   Show number of files saved on status bar when using Save All.
 
 
 2009-11-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
